# mlc-storage

./: .env.example  .gitignore  .gitmodules  HANDOFF_2026-02-07.md  README.md  Rules.md  Submission_guidelines.md  benchmark_s3dlio_write.py  benchmark_write_comparison.py  demo_storage_library.py  parquet_byte_range_example.py  pyproject.toml  setup_env.sh  test_compat.py  test_multi_endpoint.py  test_multi_endpoint_integration.py  test_storage_library.py
.github/: CODEOWNERS
.github/workflows/: cla.yml  test.yml.SAVE
checkpointing/: README.md
docs/: IMPLEMENTATION_COMPARISON.md  MULTI_ENDPOINT.md  MULTI_ENDPOINT_GUIDE.md  OBJECT_STORAGE_GUIDE.md  Object_Storage.md  Object_Storage_Library_Setup.md  Object_Storage_Test_Results.md  PARQUET_FORMATS.md  PERFORMANCE_TESTING.md  PR_Readiness_Plan.md  QUICK_START.md  README.md  S3DLIO_INTEGRATION.md  S3DLIO_TEST_RECORD.md  STORAGE_LIBRARIES.md  STORAGE_LIBRARY_HANDOFF.md  STORAGE_LIBRARY_TESTING_STATUS.md  Streaming-Chkpt-Guide.md  TF_ObjectBranch-Strategy.md
docs/archive/: README.md
docs/pr-parquet-readers/: pr-mlp-storage-parquet-readers.md
docs/pr-stream-chkpt/: LOGICAL_ANALYSIS_MULTI_ENDPOINT.md  PR_STATUS.md  TESTING_QUICK_REFERENCE.md  TWO_PR_WORKFLOW.md
docs/testing/: TEST_README.md
kv_cache_benchmark/: MLperf v3 KV cache proposal.md  README.md  config.yaml  kv-cache.py  pyproject.toml  requirements.txt
kv_cache_benchmark/docs/: MLperf v3 KV cache proposal.md  MLperf_v3_KV_cache_proposal.md  datagen_dedup_analysis.md  dgen_benchmark_results.md  fill_comparison_results.md  io_trace_log_usage.md  simulated_gpu_tier_design.md  zero_copy_data_producer.md
kv_cache_benchmark/kv_cache/: __init__.py  _compat.py  backends.py  benchmark.py  cache.py  cli.py  config.py  conversation.py  data_producer.py  models.py  monitoring.py  prefix_cache.py  rag.py  tracer.py  workload.py
kv_cache_benchmark/tests/: bench_datagen_comparison.py  bench_fill_comparison.py  test_data_producer.py  test_kv_cache.py
kv_cache_benchmark/utils/: distill_fio.py  json_to_xlsx.py  kv-cache-wrapper.sh  run_benchmarks_256gb.sh  storage_latency_stack.bt  storage_latency_stack.sh
mlpstorage/: __init__.py  ban_boto3.py  cli_parser.py  report_generator.py  rules.py  rules_legacy.py  validation_helpers.py
mlpstorage/benchmarks/: dlio.py
mlpstorage/checkpointing/: __init__.py  streaming_checkpoint.py
mlpstorage/cli/: common_args.py
mlpstorage/submission_checker/: README.md  constants.py  loader.py  main.py  results.py  utils.py
mlpstorage_py/: config.py  error_messages.py  main.py  progress.py  rules_legacy.py  utils.py  validation_helpers.py
mlpstorage_py/benchmarks/: base.py  dlio.py  kvcache.py
mlpstorage_py/checkpointing/: streaming_checkpoint.py
mlpstorage_py/cli/: __init__.py  checkpointing_args.py  common_args.py  kvcache_args.py  training_args.py  vectordb_args.py
mlpstorage_py/reporting/: formatters.py
mlpstorage_py/rules/: models.py  utils.py  verifier.py
mlpstorage_py/submission_checker/: results.py
patches/: README.md  s3_torch_storage.py  storage_factory.py  storage_handler.py
tests/: Checkpoint_test_results.md  DLIO-optimization-analysis-2026-04-25.md  DLRM_test_results.md  Flux_test_results.md  Parquet_dataloading.md  README.md  RetinaNet_test_results.md  TEST-PLAN-2026-04-25.md  conftest.py  feature_branch_setup.sh
tests/benchmarks/: bench_concurrency.py  bench_phases.py  bench_put_bytes.py  bench_rt_switch.py  bench_write_sizes.py  bench_zerocopy.py
tests/checkpointing/: compare_methods.py  demo_checkpoint_methods.sh  test_streaming_backends.py
tests/configs/: S3_TESTING_GUIDE.md  S3_TEST_RESULTS.md  s3_test_dpsi.yaml  s3_test_mlp_minio.yaml  s3_test_mlp_s3dlio.yaml  s3_test_mlp_s3torchconnector.yaml  s3_workload_unet3d.yaml
tests/fixtures/: mock_collector.py  sample_data.py
tests/integration/: benchmark_read_comparison.py  benchmark_s3dlio_read.py  benchmark_write_comparison.py  generate_test_data.py  install_s3dlio_backend.py  install_storage_library_patch.py  test_ab_comparison.py  test_benchmark_flow.py  test_compat_runtime.py  test_dlio_mpi.py  test_dlio_storage.py  test_full_submission.py  test_mpi_basic.py  test_s3_connectivity.py  test_zerocopy_direct.py  verify_s3dlio.py
tests/object-store/: NPZ-OPTIMIZATION-ANALYSIS.md  Object_Perf_Results.md  README.md  S3library_review_21-Mar.md  bench-results-retinanet-20260425.md  bench_npz_build.py  demo_streaming_checkpoint.sh  dlio_minio_checkpoint.sh  dlio_minio_cleanup.sh  dlio_minio_cycle.sh  dlio_minio_datagen.sh  dlio_minio_train.sh  dlio_mpi_object_results.md  dlio_s3dlio_checkpoint.sh  dlio_s3dlio_cleanup.sh  dlio_s3dlio_cycle.sh  dlio_s3dlio_datagen.sh  dlio_s3dlio_train.sh  dlio_s3torch_checkpoint.sh  dlio_s3torch_cleanup.sh  dlio_s3torch_datagen.sh  dlio_s3torch_train.sh  run_checkpointing.sh  run_cleanup.sh  run_datagen.sh  run_training.sh  s3ultra-test-results-20260425.md  scaling-analysis-2026-04-25.md  test_direct_write_comparison.py  test_dlio_direct_s3dlio.sh  test_dlio_multilib_demo.py  test_minio_checkpoint.py  test_mlp_minio.sh  test_mlp_s3dlio.sh  test_mlp_s3torch.sh  test_multi_endpoint_s3dlio.py  test_s3dlio_checkpoint.py  (+5 more)
training/: README.md
vdb_benchmark/: .gitignore  README.md  docker-compose.yml  pyproject.toml
vdb_benchmark/stacks/milvus/standalone/minio/: .env.example  docker-compose.yml
vdb_benchmark/stacks/milvus/standalone/s3/: .env.example  docker-compose.yml
vdb_benchmark/tests/: Makefile  README.md  requirements.txt
vdb_benchmark/tests/fixtures/: test_config.yaml
vdb_benchmark/tests/tests/: __init__.py  conftest.py  run_tests.py  test_compact_and_watch.py  test_config.py  test_database_connection.py  test_index_management.py  test_load_vdb.py  test_simple_bench.py  test_vector_generation.py  verify_fixes.py
vdb_benchmark/tests/utils/: __init__.py  mock_data.py  test_helpers.py
vdb_benchmark/vdbbench/: collection_mgr.py  compact_and_watch.py  config_loader.py  enhanced_bench.py  load_vdb.py  simple_bench.py
vdb_benchmark/vdbbench/configs/: 1m_aisaq_512dim.yaml  1m_diskann_512dim.yaml
(+109 files in other folders)
