[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlpstorage"
version = "2.0.0b1"
description = "MLPerf Storage Benchmark Suite"
readme = "README.md"
authors = [
    {name = "MLCommons Storage Working Group"}
]
requires-python = ">=3.10.0"
dependencies = [
    "dgen-py>=0.2.0",
    "dlio-benchmark @ git+https://github.com/russfellows/dlio_benchmark.git@main",
    "minio",
    "psutil>=5.9",
    "pyarrow",
    "s3dlio>=0.9.50",
    "s3torchconnector"
]

[project.urls]
"Homepage" = "https://github.com/mlcommons/storage"
"Bug Tracker" = "https://github.com/mlcommons/storage/issues"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
"mlpstorage" = ["../configs/dlio/workload/*.yaml"]

[project.scripts]
mlpstorage = 'mlpstorage.main:main'